# tiny-image-tool

./: .gitignore  README.md  deploy.md  index.html  package-lock.json  package.json
.github/workflows/: build-windows.yml
docs/superpowers/specs/: 2026-06-25-homepage-design.md
scripts/: build-windows.sh
site/: next.config.mjs  package-lock.json  package.json  style.md  tsconfig.json
site/src/: content.mdx  mdx.d.ts
site/src/app/: globals.css  layout.tsx  page.tsx
site/src/components/: HomePage.tsx  IconBadge.tsx  ProductMockup.tsx
src/: App.tsx  defaults.test.ts  defaults.ts  i18n.test.ts  i18n.ts  site-content.test.ts  styles.css  types.ts  utils.test.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  cancellation.rs  config.rs  diagnostics.rs  files.rs  lib.rs  main.rs  metadata.rs  models.rs  power.rs  watcher.rs
