[package]
name = "tiny-image-tool"
version = "0.1.0"
description = "Desktop image compression tool powered by Compresto and Tinify"
authors = ["Tiny Image Tool"]
edition = "2021"

[lib]
name = "tiny_image_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"

